[gd_scene load_steps=6 format=3 uid="uid://ss8rdvj5xugi"]

[ext_resource type="Script" path="res://SCRIPTS/playground.gd" id="1_eiq57"]
[ext_resource type="PackedScene" uid="uid://blqp4w42gjwru" path="res://SCENES/spinner.tscn" id="1_p8cck"]
[ext_resource type="PackedScene" uid="uid://cxq26bgi6tp3y" path="res://SCENES/stop_button.tscn" id="2_wuo5g"]
[ext_resource type="PackedScene" uid="uid://cl3soqbpi3kfl" path="res://SCENES/lever.tscn" id="3_ivvf6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p21bk"]

[node name="Playground" type="Node"]
script = ExtResource("1_eiq57")

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundTexture" type="TextureRect" parent="Background"]
offset_right = 640.0
offset_bottom = 360.0

[node name="TopRow" type="Node2D" parent="."]

[node name="ScoreBox" type="PanelContainer" parent="TopRow"]
custom_minimum_size = Vector2(480, 64)
offset_right = 480.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_p21bk")

[node name="ScoreRow" type="HBoxContainer" parent="TopRow/ScoreBox"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="TopRow/ScoreBox/ScoreRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: "
horizontal_alignment = 2

[node name="Score" type="Label" parent="TopRow/ScoreBox/ScoreRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="MiddleRow" type="Node2D" parent="."]

[node name="Spinners" type="Node2D" parent="MiddleRow"]

[node name="Spinner" parent="MiddleRow/Spinners" instance=ExtResource("1_p8cck")]
position = Vector2(80, 180)

[node name="Spinner2" parent="MiddleRow/Spinners" instance=ExtResource("1_p8cck")]
position = Vector2(240, 180)

[node name="Spinner3" parent="MiddleRow/Spinners" instance=ExtResource("1_p8cck")]
position = Vector2(400, 180)

[node name="Lever" type="Node2D" parent="MiddleRow"]

[node name="Lever" parent="MiddleRow/Lever" instance=ExtResource("3_ivvf6")]

[node name="BottomRow" type="Node2D" parent="."]

[node name="Buttons" type="Node2D" parent="BottomRow"]

[node name="StopButton" parent="BottomRow/Buttons" instance=ExtResource("2_wuo5g")]
position = Vector2(80, 328)

[node name="StopButton2" parent="BottomRow/Buttons" instance=ExtResource("2_wuo5g")]
position = Vector2(240, 328)

[node name="StopButton3" parent="BottomRow/Buttons" instance=ExtResource("2_wuo5g")]
position = Vector2(400, 328)

[connection signal="stopped" from="MiddleRow/Spinners/Spinner" to="." method="_on_spinner_stopped"]
[connection signal="stopped" from="MiddleRow/Spinners/Spinner2" to="." method="_on_spinner_stopped"]
[connection signal="stopped" from="MiddleRow/Spinners/Spinner3" to="." method="_on_spinner_stopped"]
[connection signal="pulled" from="MiddleRow/Lever/Lever" to="." method="_on_lever_pulled"]
[connection signal="stop_pressed" from="BottomRow/Buttons/StopButton" to="." method="_on_stop_one_pressed"]
[connection signal="stop_pressed" from="BottomRow/Buttons/StopButton2" to="." method="_on_stop_two_pressed"]
[connection signal="stop_pressed" from="BottomRow/Buttons/StopButton3" to="." method="_on_stop_three_pressed"]
